--- a/mysql/haproxy.cfg
+++ b/mysql/haproxy.cfg
@@ -1,3 +1,6 @@
-listen mysql 0.0.0.0:3306
+listen MySQL 0.0.0.0:3306
+    timeout connect 10s
+    timeout client 1m
+    timeout server 1m
     mode tcp
-    server db 0.0.0.0:3307
+    server Primary 0.0.0.0:3307
