--- a/mysql/haproxy.cfg
+++ b/mysql/haproxy.cfg
@@ -1,3 +1,21 @@
+global
+	log 127.0.0.1	local0
+	log 127.0.0.1	local1 notice
+	maxconn 1024000
+	user haproxy
+	group haproxy
+	daemon
+
+defaults
+	log	global
+	mode	http
+	retries	3
+	option redispatch
+	maxconn	1024000
+	contimeout	50000
+	clitimeout	50000
+	srvtimeout	50000
+
 listen MySQL 0.0.0.0:3306
     timeout connect 10s
     timeout client 1m
