--- a/mysql/haproxy.cfg
+++ b/mysql/haproxy.cfg
@@ -17,8 +17,6 @@ defaults
 	srvtimeout	50000
 
 listen MySQL 0.0.0.0:3306
-    timeout connect 10s
-    timeout client 1m
-    timeout server 1m
-    mode tcp
-    server Primary 0.0.0.0:3307
+  mode tcp
+  balance roundrobin
+  server mysql 0.0.0.0:3307
