--- a/mysql/haproxy.cfg
+++ b/mysql/haproxy.cfg
@@ -1,22 +1,13 @@
 global
-	log 127.0.0.1	local0
-	log 127.0.0.1	local1 notice
 	maxconn 1024000
-	user haproxy
-	group haproxy
-	daemon
+	debug
 
 defaults
-	log	global
-	mode	http
-	retries	3
-	option redispatch
-	maxconn	1024000
-	contimeout	50000
-	clitimeout	50000
-	srvtimeout	50000
+	mode tcp
+	timeout connect 5000ms
+	timeout client 50000ms
+	timeout server 50000ms
 
-listen MySQL 0.0.0.0:3306
-  mode tcp
-  balance roundrobin
-  server mysql 0.0.0.0:3307
+backend mysql
+	bind *:3306
+	server mysql 0.0.0.0:3307
