--- a/mysql/haproxy.cfg
+++ b/mysql/haproxy.cfg
@@ -8,6 +8,6 @@ defaults
 	timeout client 50000ms
 	timeout server 50000ms
 
-backend mysql
+frontend mysql
 	bind 127.0.0.1:3306
 	server mysql 0.0.0.0:3307
