--- a/mysql/haproxy.cfg
+++ b/mysql/haproxy.cfg
@@ -8,6 +8,7 @@ defaults
 	timeout client 50000ms
 	timeout server 50000ms
 
-frontend mysql
-	bind 127.0.0.1:3306
+listen  mysql
+        bind *:3306
+        mode tcp
 	server mysql 0.0.0.0:3307
