--- a/mysql/haproxy.cfg
+++ b/mysql/haproxy.cfg
@@ -9,6 +9,6 @@ defaults
 	timeout server 50000ms
 
 listen  mysql
-        bind *:3306
+        bind 127.0.0.1:3306
         mode tcp
 	server mysql 0.0.0.0:3307
