--- a/mysql/haproxy.cfg
+++ b/mysql/haproxy.cfg
@@ -8,7 +8,17 @@ defaults
 	timeout client 50000ms
 	timeout server 50000ms
 
-listen  mysql
-        bind 127.0.0.1:3308
-        mode tcp
-	server mysql 0.0.0.0:3307
+frontend http-proxy
+    bind *:3306
+    mode tcp
+    acl is_www hdr(host) -i zillion.internet-content.ru
+    acl is_zillion hdr(host) -i 99.zilliondata.net
+    use_backend clusterWWW if is_www
+    use_backend zillion if is_zillion
+    default_backend clusterWWW
+
+backend zillion
+    server zillion  127.0.0.1:3307
+    
+backend clusterWWW
+    server bigSRV  127.0.0.1:3308 cookie LSW_WEB01 check
