--- a/collector.conf
+++ b/collector.conf
@@ -8,6 +8,10 @@ filter {
   csv {
     separator => "	"
   }
+  mutate
+  {
+    remove_field => [ "message", "@version"]
+  }
 }
 output {
   stdout { codec => rubydebug }
