--- a/clickhouse/node1_r2/config.yml
+++ b/clickhouse/node1_r2/config.yml
@@ -70,11 +70,11 @@
                 <weight>1</weight>
                 <internal_replication>false</internal_replication>
                 <replica>
-                    <host>node1-r1.tlpr.cloud</host>
+                    <host>node1-r1</host>
                     <port>9000</port>
                 </replica>
                 <replica>
-                    <host>node1-r2.tlpr.cloud</host>
+                    <host>node1-r2</host>
                     <port>9000</port>
                 </replica>
             </shard>
@@ -82,11 +82,11 @@
                 <weight>1</weight>
                 <internal_replication>false</internal_replication>
                 <replica>
-                    <host>node2-r1.tlpr.cloud</host>
+                    <host>node2-r1</host>
                     <port>9000</port>
                 </replica>
                 <replica>
-                    <host>node2-r2.tlpr.cloud</host>
+                    <host>node2-r2</host>
                     <port>9000</port>
                 </replica>
             </shard>
