--- a/redis/master.conf
+++ b/redis/master.conf
@@ -1,4 +1,7 @@
 port 6379
+{{ if .Env.PASS }}
+requirepass {{ .Env.PASS }}
+{{end}}
 cluster-enabled yes
 cluster-config-file nodes.conf
 cluster-node-timeout 5000
